All contrasts issues fixed

--- a/css/dr4uaccessible.css
+++ b/css/dr4uaccessible.css
@@ -47,16 +47,3 @@ body .page-wrapper .page-footer .footer-copyright-wrapper {
     color: #000000 !important;
     background-color: #ffffff;
 }
-
-/*.elementor-1750 .elementor-element.elementor-element-2656f02e:not(.elementor-motion-effects-element-type-background), .elementor-1750 .elementor-element.elementor-element-2656f02e > .elementor-motion-effects-container > .elementor-motion-effects-layer {
-    background-color: #ffffff !important;
-}
-
-
-body .page-wrapper {
-    color: #ffffff !important
-}
-
-.elementor-1750 .elementor-element.elementor-element-65a5b096 {
-    background-color: #ffffff !important;
-}*/
